--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1 class="title">My team</h1>
         <div class="flex-wrapper">
           <div class="wrapper overaly-container">
-            <img src="/img/person_2.jpg" alt="" class="photo">
+            <img src="img/person_2.jpg" alt="" class="photo">
             <div class="overlay">
               <div class="overlay__text">
                 <h1 class="title">This is Peter-guard-1</h1> <br/>
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="wrapper overaly-container">
-            <img src="/img/person_1.jpg" alt="" class="photo">
+            <img src="img/person_1.jpg" alt="" class="photo">
             <div class="overlay">
               <div class="overlay__text">
                 <h1 class="title">This is Me</h1> <br/>
@@ -47,7 +47,7 @@
             </div>
           </div>
           <div class="wrapper overaly-container">
-            <img src="/img/person_3.jpg" alt="" class="photo">
+            <img src="img/person_3.jpg" alt="" class="photo">
             <div class="overlay">
               <div class="overlay__text">
                 <h1 class="title">This is Peter-guard-2</h1> <br/>
