--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
   
 
 </body>
-<script src="scripts/_header-scroll.js"></script>
+<script src="scripts/header-scroll.js"></script>
 <script src="scripts/main.js"></script>
 </html>
