Modify scss files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Test</title>
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper d-flex center">
     <header id="page-header" class="header">
       <img src="img/logo.jpg" alt="logo" class="logo">
   
@@ -22,7 +22,7 @@
       
     </header>
   
-    <main class="main">
+    <main class="main container ">
       
       <div id="my-team" class="my-team-block content-wrapper">
         <h1 class="title">My team</h1>
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="wrapper overaly-container">
-            <img src="img/person_1.jpg" alt="" class="photo">
+            <img id="petro-guard-1" src="img/person_1.jpg" alt="" class="photo">
             <div class="overlay">
               <div class="overlay__text">
                 <h1 class="title">This is Me</h1> <br/>
