--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   
       <div id="skills" class="skills-block content-wrapper">
   
-        <h1 class="title">My skills</h1>
+        <h1 class="title">My skills (NONE)</h1>
   
         <div class="flex-wrapper">
           <div class="list">
