--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         
       </div>
   
-      <div id="skills" class="skills-block content-wrapper">
+      <div id="skills" class="skills-block content-wrapper master1">
   
         <h1 class="title">My skills (NONE)</h1>
   
