Added contact block Added icons Reworked footer

--- a/index.html
+++ b/index.html
@@ -125,21 +125,20 @@
         </div>
       </div>
 
+
       <div class="contact-block content-wrapper">
         <div id="map"></div>
       </div>
 
     </main>
 
-    <footer class="footer space-between">
-      <div class="wrapper">
-
-      </div>
-      <div class="wrapper">
-
-      </div>
-      <div class="wrapper">
-         created by Minailiuk Peter 2020&copy;
+    <footer class="footer space-between center">
+      <div class="wrapper ">
+        <h1 class="small-title">Contact me</h1>
+        <a target="_blank" href="https://www.instagram.com/petroykrainec/"><span class="iconify icon" data-icon="ant-design:instagram-outlined" data-inline="false"></span></a>
+        <a target="_blank" href="https://t.me/MinPt"><span class="iconify icon" data-icon="la:telegram" data-inline="false"></span></a>
+        <a target="_blank" href="https://github.com/MinPt"><span class="iconify icon" data-icon="bytesize:github" data-inline="false"></span></a>
+        <a target="_blank" href=""><span class="iconify icon" data-icon="ant-design:mail-outlined" data-inline="false"></span></a>
       </div>
     </footer>
   </div>
@@ -149,4 +148,5 @@
 <script src="scripts/nav-toggler.js"></script>
 <script src="scripts/carousel.js"></script>
 <script src="scripts/map.js"></script>
+<script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </html>
