--- a/index.html
+++ b/index.html
@@ -140,21 +140,28 @@
         <a target="_blank" href="https://www.instagram.com/petroykrainec/"><span class="iconify icon" data-icon="ant-design:instagram-outlined" data-inline="false"></span></a>
         <a target="_blank" href="https://t.me/MinPt"><span class="iconify icon" data-icon="la:telegram" data-inline="false"></span></a>
         <a target="_blank" href="https://github.com/MinPt"><span class="iconify icon" data-icon="bytesize:github" data-inline="false"></span></a>
-        <a id="contact_img" href="#contact_img"><span class="iconify icon" data-icon="ant-design:mail-outlined" data-inline="false"></span></a>
+        <label for="pop-up"><span class="iconify icon" data-icon="ant-design:mail-outlined" data-inline="false"></span></label> 
+        <input type="checkbox" id="pop-up">
+        <div id="contact-block" class="contact">
+          <div id="pop-up-form" class="form">
+            <label for="form__e-mail" class="form__label">Enter your e-mail</label>
+            <input id="form__e-mail" type="email" class="form__input">
+            <label for="form__name" class="form__label">Your Name</label>
+            <input id="form__name" type="password" class="form__input">
+            <label for="form_message" class="form__label">Your massage</label>
+            <input id="form_message" type="text" class="form__input">
+            <div class="wrapper d-flex">
+              <button class="btn">Send e-mail</button>
+              <button class="btn"><label for="pop-up">close</label></button> 
+            </div>
+            
+
+          </div>
+        </div>
       </div>
     </footer>
 
-    <div id="contact-block" class="contact">
-      <div class="form">
-        <label for="form__e-mail" class="form__label">Enter your e-mail</label>
-        <input id="form__e-mail" type="email" class="form__input">
-        <label for="form__name" class="form__label">Your Name</label>
-        <input id="form__name" type="password" class="form__input">
-        <label for="form_message" class="form__label">Your massage</label>
-        <input id="form_message" type="text" class="form__input">
-        <button class="btn">Send e-mail</button>
-      </div>
-    </div>
+    
   </div>
 </body>
 <script src="scripts/header-scroll.js"></script>
@@ -163,5 +170,5 @@
 <script src="scripts/carousel.js"></script>
 <script src="scripts/map.js"></script>
 <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-<script src="scripts/contact.js"></script>
+
 </html>
