test dark color scheme media query

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
 
 
-      <div class="contact-block content-wrapper">
+      <div class="content-wrapper">
         <div id="map"></div>
       </div>
 
